# basic-cmake-stm32

./: CMakeCache.txt  CMakeLists.txt  README.md  make.py  stm32.cmake
Src/: main.c
